MINOR: rename mySys_ file prefix to mSys_ prefix
On branch master
	renamed:    mySys_MAIN.pdf -> mSys_MAIN.pdf
	renamed:    mySys_MAIN.tex -> mSys_MAIN.tex
	renamed:    mySys_MandM.tex -> mSys_MandM.tex
	renamed:    mySys_discussion.tex -> mSys_discussion.tex
	renamed:    mySys_intro.tex -> mSys_intro.tex
	renamed:    mySys_results.tex -> mSys_results.tex
	renamed:    mySys_suppl_0.1.tex -> mSys_suppl_0.1.tex

--- a/mSystems/mSys_MAIN.tex
+++ b/mSystems/mSys_MAIN.tex
@@ -160,16 +160,16 @@ microbiome, systems biology, ecological modelling, community composition, stabil
 %===================================== SECTIONS =======================================
 %%% Introduction
 \section*{Introduction}
-\input{mySys_intro.tex}   
+\input{mSys_intro.tex}   
 %%% Result
 \section*{Results}
-\input{mySys_results.tex}
+\input{mSys_results.tex}
 %%% Discussion
 \section*{Discussion}
-\input{mySys_discussion.tex}    
+\input{mSys_discussion.tex}    
 %%% Material & Methods
 \section*{Materials and Methods}
-\input{mySys_MandM.tex}   
+\input{mSys_MandM.tex}   
 
 
 \section*{Acknowledgments}
