--- a/mSystems/mSys_intro.tex
+++ b/mSystems/mSys_intro.tex
@@ -1,3 +1,1 @@
-The desire to understand the factors that influence human health and cause diseases has always been one of the major driving forces of biological research. Modern high-throughput sequencing and bioinformatics tools provide a powerful means of understanding how the human microbiome contributes to health and its potential as a target for therapeutic interventions. High throughput methods for microbial 16S ribosomal RNA gene and WGS have now begun to reveal the composition of archaeal, bacterial, fungal and viral communities located both, in and on the human body. Biology has recently acquired new technological and conceptual tools to investigate, model and understand living organisms at the system level, thanks to the spectacular progress in quantitative techniques, large-scale measurement methods and the integration of experimental and computational approaches. Systems Biology has mostly been devoted to the study of well-characterized model organisms but, since the early days of the Human Genome Project it has become clear that applications of system-wide approaches to Human Biology would bring huge opportunities in Medicine. Here we present the imprints of disease in macroscopic properties of the system, by studying the temporal variability in the microbiome.
-
-Here we present the imprints of disease in macroscopic properties of the system, by studying the temporal variability in the microbiome. We have analyzed more than 35000 time series of taxa from the gut microbiome of 97 individuals (sampling from three up to 332 time points), obtained from publicly available high throughput sequencing data on different conditions: diseases, diets, obese status, antibiotic perturbation and healthy individuals. We engineered a complete software framework, ComplexCruncher, to support the analysis of the dynamics of ranking processes in complex systems, which is ready to be utilized by other users.?
+The desire to understand the factors that influence human health and cause diseases has always been one of the major driving forces of biological research. We are populated by a myriad of microorganisms that are interacting with us in several physiological processes such as metabolism regulation or maturation of the immune system. Human microbiota has been suggested to be closely related to diseases like type 2 diabetes [ref], cardiovascular disease (CVD) [ref], irritable bowel syndrome [ref], Crohn?s disease [ref] or some affections as obesity [ref] or malnutrition [ref]. High throughput methods for microbial 16S ribosomal RNA gene and WGS have now begun to reveal the composition of archaeal, bacterial, fungal and viral communities located both, in and on the human body. Modern high-throughput sequencing and bioinformatics tools provide a powerful means of understanding how the human microbiome contributes to health and its potential as a target for therapeutic interventions [ref?]. Biology has recently acquired new technological and conceptual tools to investigate, model and understand living organisms at the system level, thanks to the spectacular progress in quantitative techniques, large-scale measurement methods and the integration of experimental and computational approaches. Systems Biology has mostly been devoted to the study of well-characterized model organisms but, since the early days of the Human Genome Project [ref] it has become clear that applications of system-wide approaches to Human Biology would bring huge opportunities in Medicine. Great effort has been placed to unveil the general laws governing the behaviour of this complex system [ref]. Due to his nature, microbiota can be studied under the light of the ecology, where we can find general principles as the Taylor?s law, which relates spatial or temporal variability of the population with its mean. This law, also known as fluctuation scale law, is ubiquitous in the natural world and can be found in several systems as cosmic rays [ref1], stock markets [ref2,3], animal populations [ref4, 5, 6], gene expression [ref7], or in the human genome [ref8]. Taylor?s law has been applied to microbiota in a spatial way in the work of Zhang et al., (2014), where they show that this population tend to be in an aggregated way rather than in a random distribution. Here we present the imprints of disease in macroscopic properties of the system, by studying the temporal variability in the microbiome. We have analyzed more than 35000 time series of taxa from the gut microbiome of 97 individuals obtained from publicly available high throughput sequencing data on different conditions: diseases, diets, obese status, antibiotic perturbation and healthy individuals. Having seen that all cases follows Taylor?s law, we use this empirical fact to model how the relative abundances of taxa evolves toward time thanks to the Langevin equation, in a similar way as Blumm et al., did in their (2012). We use this mathematical framework to explore the temporal stability of the microbiota in different conditions in order to understand how this affects the healthy status of the subjects. Finally, we have engineered a complete software framework, ComplexCruncher, to support the analysis of the dynamics of ranking processes in complex systems, which is ready to be implemented by other users.
