Daniel M. Martinez -> Daniel Martínez-Martínez

--- a/mSystems/mSys_MAIN.tex
+++ b/mSystems/mSys_MAIN.tex
@@ -124,7 +124,7 @@
 \doublespacing
 
 \author[1,2]{Jose Manuel Martí}
-\author[1,2,3]{Daniel M. Martínez}
+\author[1,2,3]{Daniel Martínez-Martínez}
 \author[2]{Manuel Peña}
 \author[1,2]{César Gracia}
 \author[1,3,4,5]{Amparo Latorre}
